--- a/login.html
+++ b/login.html
@@ -60,7 +60,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 				<h3 class="title1">SignIn Page</h3>
 				<div class="widget-shadow">
 					<div class="login-top">
-						<h4>Welcome to a site for rubric ! <br> Not a Member? <a href="signup.html">  Sign Up »</a> </h4>
+						<h4>Welcome to a site for rubric !</h4>
 					</div>
 					<div class="login-body">
 						<form>
@@ -78,11 +78,11 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 					</div>
 				</div>
 				
-				<div class="login-page-bottom">
-					<h5> - OR -</h5>
-					<div class="social-btn"><a href="#"><i class="fa fa-facebook"></i><i>Sign In with Facebook</i></a></div>
-					<div class="social-btn sb-two"><a href="#"><i class="fa fa-twitter"></i><i>Sign In with Twitter</i></a></div>
-				</div>
+<!-- 				<div class="login-page-bottom">
+	<h5> - OR -</h5>
+	<div class="social-btn"><a href="#"><i class="fa fa-facebook"></i><i>Sign In with Facebook</i></a></div>
+	<div class="social-btn sb-two"><a href="#"><i class="fa fa-twitter"></i><i>Sign In with Twitter</i></a></div>
+</div> -->
 			</div>
 		</div>
 	</div>
