[Change] login text

--- a/login.html
+++ b/login.html
@@ -57,10 +57,10 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 		<!-- main content start-->
 		<div id="page-wrapper">
 			<div class="main-page login-page ">
-				<h3 class="title1">SignIn Page</h3>
+				<h3 class="title1">Welcome</h3>
 				<div class="widget-shadow">
 					<div class="login-top">
-						<h4>Welcome to a site for rubric !</h4>
+						<!-- <h4>Welcome</h4> -->
 					</div>
 					<div class="login-body">
 						<form>
