--- a/students_performance_feedback.html
+++ b/students_performance_feedback.html
@@ -880,7 +880,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 			});	
 
 			function back(){
-				window.location.href = "index2.html";
+				window.location.href = "input_rubric.html";
 			}
 
 			function students_performance_feedback(){
