--- a/input_rubric.html
+++ b/input_rubric.html
@@ -34,7 +34,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 <link href="css/custom.css" rel="stylesheet">
 
 <style type="text/css">
-	button{
+	table button{
 		color: rgb(100, 100, 100);
 	    background-color: Transparent;
 	    background-repeat:no-repeat;
