[Update] text for index.html

--- a/index.html
+++ b/index.html
@@ -109,30 +109,41 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 		<!-- main content start-->
 		<div id="page-wrapper">
 			<div class="main-page general">
-				<h3 class="title1">Home</h3>
+				<h3 class="title1"></h3>
 				<div class="panel-info widget-shadow">
-					<h4 class="title2">Input rubrics and data :</h4>
+					<!-- <h4 class="title2">Input rubrics and data :</h4> -->
 					<div class="col-md-6 panel-grids">
 						<div class="panel panel-primary"> 
 							<div class="panel-heading"> 
-								<h3 class="panel-title">Upload Rubric</h3> 
+								<h3 class="panel-title">Rubric Validation</h3> 
 							</div> 
-							<div class="panel-body"> <span>Upload rubrics from your computer</span>
+							<div class="panel-body"> <span>Automatically generate feedbacks for your rubric</span>
 								<div style="float:right">
-									<button type="button" class="btn btn-primary" onclick="upload_rubric()">Upload Rubric</button>
+									<button type="button" class="btn btn-primary" onclick="upload_rubric()">Start Rubric Validation</button>
 								</div>
+								<hr>
+								<p>Step 1: (Optional) Upload Your Rubric</p>
+								<p>Step 2: Input/Edit Your Rubic</p>
+								<p>Step 3: Generate Feedback For Your Rubic</p>
+								<p>Step 4: (Optional) Export Rubric With Feedback</p>
+								<p>Step 5: Improve Your Rubic</p>
+								<p>Step 6: Export Your Rubic</p>
 							</div>		
 						</div>
 					</div>
 					<div class="col-md-6 panel-grids">
-						<div class="panel panel-default">
+						<div class="panel panel-primary">
 							<div class="panel-heading"> 
-								<h3 class="panel-title">Upload Data</h3> 
+								<h3 class="panel-title">Guttman Analysis</h3> 
 							</div> 
-							<div class="panel-body"> <span>Upload students` data in '.csv' or '.xls' format</span>
+							<div class="panel-body"> <span>Automatically Generate Post Assessment Feedback For Your Student</span>
 								<div style="float:right">
-									<button type="button" class="btn btn-default" onclick="upload_students_data()">Upload Data</button>
+									<button type="button" class="btn btn-primary" onclick="upload_students_data()">Start Guttman Analysis</button>
 								</div>
+								<hr>
+								<p>Step 1: Upload Your Student Data</p>
+								<p>Step 2: Feedback will be generated Automatically For You</p>
+								<p>Step 3: Export Your Feedback with Guttman Chart</p>
 							</div>	
 						</div>
 					</div>
