--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>General Elements</title>
+<title>Home</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="Novus Admin Panel Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
@@ -45,10 +45,10 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 							<a href="index.html"><i class="fa fa-home nav_icon"></i>Home</a>
 						</li>
 						<li>
-							<a href="input_rubric.html"><i class="fa fa-table nav_icon"></i>Input Rubrics</a>
+							<a href="input_rubric.html"><i class="fa fa-table nav_icon"></i>Rubric Validation</a>
 						</li>
 						<li>
-							<a href="students_performance_feedback.html"><i class="fa fa-check-square-o nav_icon"></i>Students Performance Feedback</a>
+							<a href="students_performance_feedback.html"><i class="fa fa-check-square-o nav_icon"></i>Guttman Analysis</a>
 						</li>
 						<li>
 							<a href="login.html"><i class="fa fa-sign-out nav_icon"></i>Logout</a>
@@ -85,7 +85,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 								<div class="profile_img">	
 									<span class="prfil-img"><img src="images/a.png" alt=""> </span> 
 									<div class="user-name">
-										<p>User1</p>
+										<p>Jessica</p>
 										<span>Educator</span>
 									</div>
 									<i class="fa fa-angle-down lnr"></i>
@@ -117,7 +117,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 							<div class="panel-heading"> 
 								<h3 class="panel-title">Rubric Validation</h3> 
 							</div> 
-							<div class="panel-body"> <span>Automatically generate feedbacks for your rubric</span>
+							<div class="panel-body"> <span>Automatically Generate Feedbacks For Your Rubric</span>
 								<div style="float:right">
 									<button type="button" class="btn btn-primary" onclick="upload_rubric()">Start Rubric Validation</button>
 								</div>
@@ -126,7 +126,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 								<p>Step 2: Input/Edit Your Rubic</p>
 								<p>Step 3: Generate Feedback For Your Rubic</p>
 								<p>Step 4: (Optional) Export Rubric With Feedback</p>
-								<p>Step 5: Improve Your Rubic</p>
+								<p>Step 5: (Optional) Improve Your Rubic</p>
 								<p>Step 6: Export Your Rubic</p>
 							</div>		
 						</div>
