--- a/input_rubric.html
+++ b/input_rubric.html
@@ -155,7 +155,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 								<div class="form-group"> 
 									<!-- <label for="exampleInputFile">File input</label>  -->
 									<input  type="file" id="exampleInputFile"> 
-									<p class="help-block" style="font-size:15px;">You can upload your local rubric in the format of .csv or .xlsx.</p> 
+									<p class="help-block" style="font-size:15px;">You can upload your local rubric in .csv or .xlsx format</p> 
 								</div> 
 								<div style="display: inline-block; margin-left:10px">
 									<button type="button" class="btn btn-primary" onclick="index2()">Upload</button>
