--- a/students_performance_feedback.html
+++ b/students_performance_feedback.html
@@ -140,7 +140,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 								<div class="form-group"> 
 									<!-- <label for="exampleInputFile">File input</label>  -->
 									<input  type="file" id="exampleInputFile"> 
-									<p class="help-block">Please your student data in the format of .csv or .xlsx.</p> 
+									<p class="help-block">Please your student data in .csv or .xlsx format</p> 
 								</div> 
 								<div style="display: inline-block; margin-left:10px">
 									<button type="button" class="btn btn-primary" onclick="students_performance_feedback()">Upload</button>
@@ -807,15 +807,11 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 						<div style="margin-top: 20px">
 
 							<div style="float:right">
-								<button class="btn btn-success">
+								<button class="btn btn-primary">
 									Export Feedback
 								</button>
 							</div>
-							<div style="float:right">
-								<button class="btn btn-default" onclick="back()">
-									Back
-								</button>
-							</div>
+
 							<div style="display: hidden; min-height:40px">
 								
 							</div>
