--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 								</div>
 								<hr>
 								<p>Step 1: Upload Your Student Data</p>
-								<p>Step 2: Feedback will be generated Automatically For You</p>
+								<p>Step 2: Feedback Will be Generated Automatically For You</p>
 								<p>Step 3: Export Your Feedback with Guttman Chart</p>
 							</div>	
 						</div>
