--- a/students_performance_feedback.html
+++ b/students_performance_feedback.html
@@ -804,9 +804,9 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 								</tr> 
 							</tbody> 
 						</table>
-						<div style="margin-top: 20px">
+						<div style="margin-top: 20px; text-align: center;">
 
-							<div style="float:right">
+							<div style="display: inline-block;">
 								<button class="btn btn-primary">
 									Export Feedback
 								</button>
