[update] rubric feedback

--- a/input_rubric.html
+++ b/input_rubric.html
@@ -335,7 +335,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 							</div>
 							<div style="float:right">
 								<button class="btn btn-primary" >
-									Export Rurbic
+									Export Rubric
 								</button>
 							</div>
 						</div>	
@@ -376,25 +376,43 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 								<tr id="tabeltr" class="active"> 
 									<th scope="row"><span>Feedback 1:</span><br/>
 									</th>
-									<td>The rubrics violate rule 2. <br> The language used in criteria XXX is ambiguous.</td>
+									<td>
+										Avoid the use of counts when writing quality criteria.
+									</td>
+									<td>
+										Found in [critera: <b>Design</b>] - [level: <b>Good</b>]
+									</td>
 								</tr> 
 								<tr id="tabeltr" > 
 									<th scope="row"><span>Feedback 2:</span><br/>
 									</th>
-									<td>The rubrics violate rule 6. <br>Please restrict description of quality to what students can do in creiteria XXX.</td>
+									<td>
+										Restrict the description of quality to what students can do.
+									</td>
+									<td>
+										Found in [critera: <b>Structure</b>] - [level: <b>Excellent</b>]
+									</td>
 
 								</tr> 								
 								<tr id="tabeltr" class="active"> 
-									<th scope="row"><span>Feedback 3:</span><br/>
+									<th scope="row"><span>Feedback 2:</span><br/>
 									</th>
-									<td>The rubrics follow rule 3</td>
-
+									<td>
+										Utilises language that of enable users to assess learning.
+									</td>
+									<td>
+										Found in [critera: <b>Understanding</b>] - [level: <b>Unsatisfactory</b>]
+									</td>
 								</tr> 
 								<tr id="tabeltr" > 
 									<th scope="row"><span>Feedback 4:</span><br/>
 									</th>
-
-									<td>The rubrics follow rule 7</td>
+									<td>
+										Avoids the use of ambiguous language to distinguish levels of quality. 
+									</td>
+									<td>
+										Found in [level: <b>Unsatisfactory</b>]
+									</td>
 								</tr> 
 							</tbody> 
 						</table>
