--- a/input_rubric.html
+++ b/input_rubric.html
@@ -370,7 +370,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 				<div class="tables">
 					<h3 class="title1">Rubric Feedback</h3>
 					<div class="bs-example widget-shadow" data-example-id="contextual-table"> 
-						<div><h4 style="text-align: center">Feedback:</h4>	<div>									
+						<div><h4 style="text-align: center">Feedbacks:</h4>	<div>									
 						<table class="table">
 							<tbody id="tablebody" > 
 								<tr id="tabeltr" class="active"> 
